test_programs/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_trait_returns_private_struct/src/main.nr

    pub mod moo {
        struct Bar {}

        pub trait Foo { 
            fn foo() -> Bar;
        }

        pub fn no_unused_warnings() {
            let _ = Bar {};
        }
    }
    fn main() {}
    